--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -23,31 +23,33 @@
     margin: 15px 0px;
   }
   
- 	#menu { width: 800px;
-			margin : 30px 0;
-		td{
-		text-align :center;
-		padding : 15px 10px;
-		background-color : #333;
-		color : white;
-		font-weight: bold;
-		border : 1px solid silver;
-		
-		&:hover{
-		background-color : #c0c0c0;
-		color : white;
-		a{
-			text-decoration : none;
-			width : 100%;
-			display : block;
-			color : white;
-			}
-		}
-		
-	}
-}
-
+  #menu    { 
+     width  : 800px;
+     margin : 30px 0;
+     
+     td { 
+	     text-align : center; 
+	     /* padding : 15px 10px; */
+	     background-color : #333;
+	     color  : white;
+	     font-weight: bold;
+	     border :1px solid silver;
+         
+         &:hover  {
+		    background-color : #c0c0c0 ;
+		    color  : white;
+		 }
+		 a {
+		    text-decoration : none;
+		 	display : block; 
+		 	padding : 15px 10px;
+		    width   : 100%; 
+		    color:white;
+		 }
+	  }  
+  }
   
+ 
   
   
   
